vpc.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Network stack for Cloud-Native Sales Dashboard

Resources:
  LabVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: lab-vpc

  LabInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: lab-igw

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref LabVPC
      InternetGatewayId: !Ref LabInternetGateway

  LabPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref LabVPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      Tags:
        - Key: Name
          Value: lab-public-subnet

  LabPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref LabVPC
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: false
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      Tags:
        - Key: Name
          Value: lab-private-subnet-1

  LabPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref LabVPC
      CidrBlock: 10.0.3.0/24
      MapPublicIpOnLaunch: false
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      Tags:
        - Key: Name
          Value: lab-private-subnet-2

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref LabVPC
      Tags:
        - Key: Name
          Value: lab-public-rt

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref LabInternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref LabPublicSubnet
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref LabVPC
      Tags:
        - Key: Name
          Value: lab-private-rt

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref LabPrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref LabPrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

  LabPublicSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: lab-sg-public
      GroupDescription: Allow HTTP, SSH, and API traffic
      VpcId: !Ref LabVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: lab-sg-public

  LabLambdaSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: lab-lambda-sg
      GroupDescription: Lambda security group to access RDS
      VpcId: !Ref LabVPC
      Tags:
        - Key: Name
          Value: lab-lambda-sg

  LabLambdaSGSelfIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref LabLambdaSG
      IpProtocol: tcp
      FromPort: 0
      ToPort: 65535
      SourceSecurityGroupId: !Ref LabLambdaSG
      Description: Allow all traffic within this security group.

  LabDBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: lab-rds-sg
      GroupDescription: Allow PostgreSQL access from Lambda and EC2
      VpcId: !Ref LabVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref LabPublicSG
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref LabLambdaSG
      Tags:
        - Key: Name
          Value: lab-rds-sg

  SecretsManagerVPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub com.amazonaws.${AWS::Region}.secretsmanager
      VpcId: !Ref LabVPC
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      SubnetIds:
        - !Ref LabPrivateSubnet1
        - !Ref LabPrivateSubnet2
      SecurityGroupIds:
        - !Ref LabLambdaSG
        - !Ref LabPublicSG

Outputs:
  VPCId:
    Description: VPC ID
    Value: !Ref LabVPC
    Export:
      Name: lab-vpc

  PublicSubnetId:
    Description: Public Subnet ID
    Value: !Ref LabPublicSubnet
    Export:
      Name: lab-public-subnet

  PrivateSubnet1Id:
    Description: Private Subnet 1 ID
    Value: !Ref LabPrivateSubnet1
    Export:
      Name: lab-private-subnet-1

  PrivateSubnet2Id:
    Description: Private Subnet 2 ID
    Value: !Ref LabPrivateSubnet2
    Export:
      Name: lab-private-subnet-2

  PublicSGId:
    Description: Public Security Group
    Value: !Ref LabPublicSG
    Export:
      Name: lab-sg-public

  DBSGId:
    Description: Database Security Group
    Value: !Ref LabDBSecurityGroup
    Export:
      Name: lab-rds-sg

  LambdaSGId:
    Description: Lambda Security Group
    Value: !Ref LabLambdaSG
    Export:
      Name: lab-lambda-sg
